# dbleaf

./: README.md  index.html  package.json
.github/workflows/: release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  backup.rs  lib.rs  main.rs  query_history.rs  ssh_tunnel.rs  storage.rs
src-tauri/src/db/: connection.rs  models.rs  queries.rs
src/components/: AiChat.tsx  AiSettings.tsx  BackupDialog.tsx  CommandPalette.tsx  ConnectionCard.tsx  ConnectionForm.tsx  DataTable.tsx  ERDiagram.tsx  ExplainTree.tsx  QueryHistory.tsx  ResizeHandle.tsx  RestoreDialog.tsx  Sidebar.tsx  SqlEditor.tsx  TabBar.tsx  TableStructure.tsx  TopBar.tsx  UpdateChecker.tsx
src/hooks/: useResizable.ts
src/i18n/: index.ts
src/locales/en/: ai.json  backup.json  common.json  connection.json  database.json
src/locales/tr/: ai.json  backup.json  common.json  connection.json  database.json
src/pages/: ConnectionManager.tsx  DatabaseSelector.tsx  DatabaseView.tsx
src/stores/: aiStore.ts  connectionStore.ts  databaseStore.ts  queryHistoryStore.ts  tabStore.ts
src/types/: ai.ts  connection.ts  explain.ts  queryHistory.ts
